# zetten

./: .cursorrules  .gitignore  .windsurfrules  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile.linux  README.md  cliff.toml  dist-workspace.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zetten.toml
.agent/workflows/: release.md
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  docs.yml  integration.yml  nightly.yml  release-crates.yml  release-dist.yml  release-pypi.yml  release-smoke.yml  release.yml
benchmarks/: runner.py
benchmarks/tools/: Justfile  Makefile  pyproject.toml  zetten.toml
docs/: ai_context.md  benchmarks.md  index.md  installation.md  quickstart.md
docs/features/: caching.md  dependencies.md  determinism.md  execution.md  scripts.md  tags.md
docs/guides/: ci.md  config.md  variables.md
docs/reference/: commands.md
features/caching/: index.html
features/determinism/: index.html
features/execution/: index.html
guides/ci/: index.html
guides/config/: index.html
guides/variables/: index.html
installation/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/ai_context/: index.html
latest/benchmarks/: index.html
latest/features/caching/: index.html
latest/features/dependencies/: index.html
latest/features/determinism/: index.html
latest/features/execution/: index.html
latest/features/scripts/: index.html
latest/features/tags/: index.html
latest/guides/ci/: index.html
latest/guides/config/: index.html
latest/guides/variables/: index.html
latest/installation/: index.html
latest/quickstart/: index.html
latest/reference/commands/: index.html
latest/search/: search_index.json
python/zetten/: installer.py
quickstart/: index.html
reference/commands/: index.html
search/: search_index.json
src/: cache.rs  cli.rs  config.rs  doctor.rs  errors.rs  graph.rs  init.rs  log.rs  main.rs  orchestrator.rs  progress.rs  root.rs  runner.rs  templates.rs  tui.rs  validator.rs  venv.rs  watch.rs
tests/: integration_errors.rs
