[package]
name = "zetten"
version = "0.1.1"
edition = "2021"
authors = ["Amit Deb deb.amit2013@gmail.com"]
description = "Fast, Python-aware task runner with deterministic caching and DAG-based scheduling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amit-devb/zetten"
homepage = "https://github.com/amit-devb/zetten"
documentation = "https://github.com/amit-devb/zetten/wiki"
keywords = ["task-runner", "python", "build", "cli", "fastapi"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
num_cpus = "1.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
