[package]
name = "zetten"
version = "1.0.9"
edition = "2021"
authors = ["Amit Deb <deb.amit2013@gmail.com>"]
description = "Fast, Python-aware task runner with deterministic caching and DAG-based scheduling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/amit-devb/zetten"
homepage = "https://docs.zetten.in"
documentation = "https://docs.zetten.in"
keywords = ["task-runner", "python", "build", "cli", "fastapi"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
num_cpus = "1.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
indicatif = "0.18.3"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
regex = "1.12.2"
notify = "8.2.0"
inquire = "0.9.1"
directories = "6.0.0"
strsim = "0.11.1"
colored = "3.0.0"
globset = "0.4.18"
ignore = "0.4.25"
ctrlc = "3.5.1"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
