[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "zetten"
version = "1.0.10"
description = "Fast task runner for Python projects"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [{ name = "Amit Deb", email = "deb.amit2013@gmail.com" }]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://docs.zetten.in"
Documentation = "https://docs.zetten.in"
Repository = "https://github.com/amit-devb/zetten"

[tool.maturin]
bindings = "bin"
strip = true
